--- a/Proposal/jair_paper/document.bib
+++ b/Proposal/jair_paper/document.bib
@@ -66,7 +66,8 @@
 @inproceedings{friedman1999learning,
   title={Learning probabilistic relational models},
   author={Friedman, Nir and Getoor, Lise and Koller, Daphne and Pfeffer, Avi},
-  booktitle={IJCAI},
+  booktitle={Proceedings of the 16th
+  International Joint Conference on Artificial Intelligence (IJCAI-1999)},
   volume={99},
   pages={1300--1309},
   year={1999}
@@ -89,15 +90,6 @@
   year={2009}
 }
 
-@article{bizer2009linked,
-	title={Linked data-the story so far},
-	author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
-	journal={{IJSWIS}},
-	volume={5},
-	number={3},
-	pages={1--22},
-	year={2009}
-}
 
 @inproceedings{kramer2000bottom,
   title={Bottom-Up Propositionalization.},
@@ -197,7 +189,7 @@ pages = {331-339}
 @article{Wu:1981:CST:1013228.511759,
  author = {Wu, Harry and Salton, Gerard},
  title = {A Comparison of Search Term Weighting: Term Relevance {vs}. Inverse Document Frequency},
- journal = {SIGIR Forum},
+ journal = {Special Intrest Group on Information Retrieval (SIGIR) Forum},
  issue_date = {Summer 1981},
  volume = {16},
  number = {1},
@@ -238,15 +230,6 @@ pages = {331-339}
   publisher={Springer}
 }
 
-@inproceedings{friedman1999learning,
-  title={Learning probabilistic relational models},
-  author={Friedman, Nir and Getoor, Lise and Koller, Daphne and Pfeffer, Avi},
-  booktitle={IJCAI},
-  volume={99},
-  pages={1300--1309},
-  year={1999}
-}
-
 @article{richardson2006markov,
   title={Markov logic networks},
   author={Richardson, Matthew and Domingos, Pedro},
@@ -256,14 +239,6 @@ pages = {331-339}
   pages={107--136},
   year={2006},
   publisher={Springer}
-}
-
-@inproceedings{speer2012representing,
-  title={Representing General Relational Knowledge in ConceptNet 5.},
-  author={Speer, Robert and Havasi, Catherine},
-  booktitle={LREC},
-  pages={3679--3686},
-  year={2012}
 }
 
 @inproceedings{cheng2011automatedfull,
@@ -332,32 +307,6 @@ pages = {331-339}
   year={1991}
 }
 
-@inproceedings{hu1996generation,
-  title={Generation of attributes for learning algorithms},
-  author={Hu, Yuh-Jyh and Kibler, Dennis},
-  booktitle={AAAI/IAAI, Vol. 1},
-  pages={806--811},
-  year={1996}
-}
-
-@inproceedings{gabrilovich2006overcoming,
-  title={Overcoming the brittleness bottleneck using Wikipedia: Enhancing text categorization with encyclopedic knowledge},
-  author={Gabrilovich, Evgeniy and Markovitch, Shaul},
-  booktitle={AAAI},
-  volume={6},
-  pages={1301--1306},
-  year={2006}
-}
-
-@inproceedings{gabrilovich2007computing,
-  title={Computing Semantic Relatedness Using Wikipedia-based Explicit Semantic Analysis.},
-  author={Gabrilovich, Evgeniy and Markovitch, Shaul},
-  booktitle={IJCAI},
-  volume={7},
-  pages={1606--1611},
-  year={2007}
-}
-
 @inproceedings{hersh1994ohsumed,
   title={OHSUMED: An interactive retrieval evaluation and new large test collection for research},
   author={Hersh, William and Buckley, Chris and Leone, TJ and Hickam, David},
@@ -375,13 +324,6 @@ pages = {331-339}
   pages={361--397},
   year={2004},
   publisher={JMLR. org}
-}
-
-@book{dvzeroski2001introduction,
-  title={An introduction to inductive logic programming},
-  author={D{\v{z}}eroski, Sa{\v{s}}o and Lavra{\v{c}}, Nada},
-  year={2001},
-  publisher={Springer}
 }
 
 @article{van1998completeness,
@@ -433,7 +375,7 @@ pages = {331-339}
 @inproceedings{ragavan1993complex,
   title={Complex concept acquisition through directed search and feature caching},
   author={Ragavan, Harish and Rendell, Larry and Shaw, Michael and Tessmer, Antoinette},
-  booktitle={IJCAI},
+  booktitle={Proceedings of the Thirteenth International Joint Conference on Artificial Intelligence (IJCAI-1993)},
   pages={946--951},
   year={1993}
 }
@@ -443,15 +385,6 @@ pages = {331-339}
   author={Utgo, Paul E and Brodley, Carla E},
   year={1991},
   institution={University of Massachusetts at Amherst}
-}
-
-@article{jarmasz2004roget,
-  title={Roget’s Thesaurus and Semantic Similarity1},
-  author={Jarmasz, Mario and Szpakowicz, Stan},
-  journal={Recent Advances in Natural Language Processing III: Selected Papers from RANLP},
-  volume={2003},
-  pages={111},
-  year={2004}
 }
 
 @article{popescul200716,
@@ -602,7 +535,7 @@ pages = {331-339}
 @inproceedings{bunescu2006using,
 	title={Using Encyclopedic Knowledge for Named entity Disambiguation.},
 	author={Bunescu, Razvan C and Pasca, Marius},
-	booktitle={EACL},
+	booktitle={11th Conference of the European Chapter of the Association for Computational Linguistics},
 	volume={6},
 	pages={9--16},
 	year={2006}
@@ -648,7 +581,7 @@ pages = {331-339}
 	publisher={CRC press}
 }
 
-@inproceedings{finkel2005incorporating_full,
+@inproceedings{finkel2005incorporatingfull,
 	title={Incorporating non-local information into information extraction systems by gibbs sampling},
 	author={Finkel, Jenny Rose and Grenager, Trond and Manning, Christopher},
 	booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
