--- a/Proposal/jair_paper/jair paper.tex
+++ b/Proposal/jair_paper/jair paper.tex
@@ -53,21 +53,26 @@ pre-defined features. These methods have proven to be successful when a collecti
 distinguishing features is available.
 In many real-world applications, however, the given set of features is not sufficient for inducing a high quality classifier.
 
-One approach for overcoming the difficulty resulting from an insufficiently expressive set of features, is to generate new features.  Most feature generation algorithms produce new features by combining the original ones in various ways.  For example, the LFC algorithm \cite{ragavan1993complex} combines the original feature using logical operators.  The LDMT algorithm \cite{utgo1991linear} uses linear combinations of the original features to construct more informative ones.  The FICUS algorithm \cite{markovitch2002feature} presents a general framework for using any set of constructors to combine features.
+One approach for overcoming the difficulty resulting from an insufficiently expressive set of features, is to generate new features. There are many existing feature generation algorithms, most of which operating by combining existing features in order to produce new ones. The LFC algorithm \cite{ragavan1993complex} combines the original features using logical operators such as $\land ,\lnot$. LFC generates features using the current set of binary features (including generated ones), and requires that any new feature will yield an increase over the original features combined to create it, in terms of information gain.
+The LDMT algorithm \cite{utgo1991linear} uses linear combinations of the original features to construct more informative ones. This allows for the use of non-binary features in feature generation approaches.
+The FICUS algorithm \cite{markovitch2002feature} presents a general framework for using any set of constructors to combine features. This essentially generalizes the above approach, allowing for a more generalized feature generation framework.
 
-While feature combination has proven to enhance the performance of induction algorithms, there are many cases where a mere combination of existing features is not enough. A new approach aims to incorporate additional knowledge from external sources in order to construct new and informative features.
-\citeA{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on Wikipedia concepts. \citeA{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features.
+These methods all provide us with ways to enhance the performance of induction algorithms through intelligent combinations of existing features. While this often suffices, there are many cases where merely combining existing features is not sufficient. For this reason, newer approaches aim to incorporate additional knowledge from external sources in order to construct new and informative features.
+\citeA{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on Wikipedia concepts. They created a mapping of words to Wikipedia articles, that serve as semantic concepts, then utilized the distance of words in the given text to those concepts as features. This approach produced positive results, especially in domains where data is sparse, such as text categorization on short texts.
+\citeA{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features. They made use of Roget's Thesaurus as a resource, allowing them to better map words and phrases to their lexical meanings.
 
-In recent years, a new resource in the form of Semantic Linked Data has begun to take form, as part of the Semantic Web project (see survey, \citeR{bizer2009linkedfull}). This resource has led to the creation of several new approaches designed to utilize the new, ontology-based representation of knowledge \cite{losch2012graph,rios2014statistical}.
-It should come as no surprise then, that there have been several efforts in utilizing Linked Data for unsupervised feature generation \cite{cheng2011automatedfull,paulheim2012unsupervisedfull}.
+In recent years, a new resource in the form of Semantic Linked Data has begun to take form, as part of the Semantic Web project (see survey, \citeR{bizer2009linkedfull}). Semantic Linked Data contains type-annotated entities covering a multitude of domains and connected using multiple semantically meaningful relations.
+This resource has led to the creation of several new approaches designed to utilize the new, ontology-based representation of knowledge \cite{losch2012graph,rios2014statistical}.
+It should come as no surprise then, that there have been several efforts in utilizing Linked Data for unsupervised feature generation \cite{cheng2011automatedfull,paulheim2012unsupervisedfull}. \citeA{cheng2011automatedfull} devise a theoretical framework for constructing features from linked data. By specifying entity types relevant to the problem at hand, they restrict the space of possible features to a more manageable size, and allow for the creation of a reasonably small amount of features. They also note that this approach tends to lead to highly sparse feature vectors.
+\citeA{paulheim2012unsupervisedfull} developed FeGeLOD, an automated, fully unsupervised framework that constructs features by using entity recognition techniques to locate semantically meaningful features in the data set, and expand upon those entities using relations within the Semantic Web. They then use feature selection techniques to remove features with a large percentage of missing, identical, or unique\footnote{Values which only appear in a single example} values. 
 
 Existing feature generation approaches based on Linked Data can offer great benefits, as they can add useful type information, and often add semantic information such as actors playing in a given movie, or the population of a given city.
-However, we would also like to be capable of identifying more complex relationships between entities.
+However, existing approaches are unsupervised, and we would also like to be capable of identifying more complex relationships between entities.
 
-In this work, we present a new methodology for generating complex relational features.  Our algorithm constructs new learning problems from existing feature values, using relational data, such as the semantic web, as the features for the constructed problem.
+In this work, we present a new methodology for generating complex relational features.  Our algorithm constructs new learning problems from existing feature values, using relational data, such as the Semantic Web, as the features for the newly constructed problem.
 Using common induction algorithms, we can then construct a classifier that serves as a feature for the original problem. An important aspect of this approach is that it can be applied recursively within the new learning problem, allowing for an automated, data-driven, exploration of the large space of possible  complex features that are difficult to discover using existing feature-generation methods.
 
-\subsection{Illustrative Example}
+\subsection{Illustrative Example} %continue working from here!
 
 Before we delve into the exact description of our algorithm, we would like to illustrate its main ideas using an illustrative example.
 Suppose we are attempting to identify people with a high risk to be suffering from a certain genetic disease. Assume that the target concept to be discovered is that those at risk are women with ancestors originating from desert areas. To do so, we are given a training sample of sick and healthy people, containing various features, including gender and their full name.
@@ -95,8 +100,8 @@ Suppose then, that we also have access to a knowledge base of facts about countr
 
 \begin{figure*}[t]
 	\centering
-	\includegraphics[width=\linewidth]{fig4.pdf}
-	\caption{Recursive construction of a learning problem on countries of origin}
+	\includegraphics[width=\linewidth]{fig4_annotated.pdf}
+	\caption{Recursive construction of a learning problem on countries of origin. $(1)$-Creating the objects for the new problem. $(2)$-Creating features using the knowledge base. $(3)$-Applying an induction algorithm. $(4)$-The resulting feature.}
 	\label{fig:moving_to_lvl2}
 \end{figure*}
 
@@ -107,8 +112,6 @@ Suppose then, that we also have access to a knowledge base of facts about countr
 	\label{fig:lvl2_tree}
 \end{figure*}
 
-\section{Feature Generation using Open Linked Data}
-%blah
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\section{Background} \label{background}
@@ -129,43 +132,35 @@ Suppose then, that we also have access to a knowledge base of facts about countr
 
 %In the case where this external knowledge is organized as a set of relations between entities, several methods can be used. One such method is using \emph{Inductive Logic Programming} \citep{muggleton1991inductive} to generate features, in a process referred to as \emph{upgrading} \citep{van2001upgrade}. This is demonstrated through the ICL algorithm, which uses a refinement graph to search for logical formulae which serve as features. The SGLR algorithm \citep{popescul200716} extends this idea to numerical features, generated using aggregation-based techniques, and then utilizes regression for inference.
 
-
-
-%should possibly be moved to related work (not limited to combinations)
-%Recently, there has been a strong trend of utilizing \emph{Deep Learning} \citep{lecun1998gradient, bengio2009learning} as a feature generation technique. These methods essentially form combinations and transformations on pre-defined features in a semi-supervised manner, thus yielding new, more predictive features.
-%There are many good examples of this, such as the ones presented in \citet{plotz2011feature} and \citet{kim2013deep}.
-
-%An interesting domain can be found in a well-known and well-explored task within the field of Natural Language Processing (NLP): the task of text classification.
-%this task involves assigning categories or labels to documents, based on their content. The potential labels/categories are given in advance, and we have a collection of labeled documents to use as a training set. This task has many practical applications, such as spam filtering, sentiment analysis and topic identification.
-
-%Until recent years, text classification systems represented text almost exclusively as a \emph{Bag of Words}, thus creating a vector space representation \citep{Wu:1981:CST:1013228.511759, salton1983introduction}. While this method offered simplicity, it had inherent limitations in terms of representation power.
-
-%A major breakthrough came in the form of the \emph{explicit sematic analysis} \citep{gabrilovich2009wikipedia} method, which used semantic concepts extracted from knowledge sources such as Wikipedia as features. This technique allowed for a richer representation of the text, and has shown improvement over the Bag-of-Words representation for the task of text classification, especially in shorter texts.
-
-%this one is pointless, right?
-%The goal of our work is to utilize Linked Data as a knowledge source for automatically generating features based on meaningful semantic concepts, thus improving existing machine learning algorithms. We intend to do so in a supervised manner to allow a better guided search over candidate features, based on a combination of complexity and predictive power. We will place focus on the domain of text classification as a natural application of our approach.
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Generating Features through Recursive Induction}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Let $O$ be a set of objects. Let $Y=\{0,1\}$ be a set of labels (we assume binary labels for ease of discussion). Let $S=\{(o_{1},y_{1}),\ldots,(o_{m},y_{m})\}$ be a set of labeled examples such that $o_{i}\in O, y_{i}\in Y$. Let $F=\{f_{1},\ldots,f_{n}\}$ be a \emph{feature map}, a set of \emph{feature functions} $f_{i}:O\rightarrow Dom_{i}$.  This definition implies a training set represented by feature vectors: $\{ (\langle f_1(o_i),\ldots,f_n(o_i)\rangle, y_i) | (o_i,y_i) \in S\}$.
 
-Given a set of relations $\bar{R}=\{R_{1},\ldots,R_{t}\}$ with arity of $n_{j}$ ($j=1\ldots k$), we can assume \text{w.l.o.g} that the first argument is a key. For each relation $R_{j}$ we define $n_{j}-1$ new binary relations where each of the first elements is the key and the second one is another column.
-Let ${\cal R}=\{R_{1},\ldots,R_{k}\}$ be such set of binary relations, where $R_{i}$ is defined over $K_{i}\times D_{i}$. These relations can thus be seen as functions $R_{i}: K_{i}\rightarrow D_{i}$.
+Given a set of relations ${\cal R}=\{R_{1},\ldots,R_{t}\}$ with arity of $n_{j}$ ($j=1\ldots t$), we can assume \text{w.l.o.g} that the first argument is a key. For each relation $R_{j}$ we define $n_{j}-1$ new binary relations where each of the first elements is the key belonging to set $K_{j}$ and the second one is another column from some domain (not necessarily one represented within the existing feature functions).
+Let $\bar{R}=\{R_{1},\ldots,R_{k}\}$ be such set of binary relations, where $R_{i}$ is defined over $K_{i}\times Dom_{i}$. These relations can thus be seen as functions $R_{i}: K_{i}\rightarrow Dom_{i}$.
 
 \begin{defn}
-	A \emph{supervised feature generation algorithm} $A$ using relations is an algorithm that given $\langle S,F,{\cal R} \rangle$, creates a new feature map $F_{\cal R}=\{f'_{1},\ldots,f'_{l}\}$.
+	A \emph{supervised feature generation algorithm} $A$ using relations is an algorithm that given $\langle S,F,{\cal R} \rangle$, creates a new feature map $F_{{\cal R}}=\{f'_{1},\ldots,f'_{l}\}$.
 \end{defn}
 
-We would like the new hypothesis space, defined over $F_{\cal R}$, to be one that is both rich enough to provide hypotheses with a lower loss than those in the original space, as well as simple enough that the learning algorithm used will be able to find such good hypotheses given training data.
+We would like the new hypothesis space, defined over $F_{{\cal R}}$, to be one that is both rich enough to provide hypotheses with a lower loss than those in the original space, as well as simple enough that the learning algorithm used will be able to find such good hypotheses given training data.
 %We would also like there to be connections between $F$ and ${\cal R}$, meaning some of the feature values of features in $F$ (when applied to objects in $S$) also exist within relations in $\cal R$.
 
-\subsection{Generating a feature} \label{algorithm_section}
+\subsection{Generating a feature} \label{algorithm_section} %add pseudo-code in chunks!!!
 
-Given an original feature $f_{i}$ with domain $Dom_i$, our algorithm will formulate a new learning task trying to separate values in $Dom_i$ appearing in positive examples of the original learning task from those appearing in negative ones.  The result of the new learning task will be a classifier
+Given an original feature $f_{i}:O\rightarrow Dom_i$, our algorithm will formulate a new learning task trying to separate values in $Dom_i$ appearing in positive examples of the original learning task from those appearing in negative ones.  The result of the new learning task will be a classifier
 $h_{i}:Dom_{i}\rightarrow \{0,1\}$ that can label feature values of $f_{i}$. We can then define a new binary feature $f'_{i}(x)=h_{i}(f_{i}(x))$.
-We name this algorithm \emph{FEAGURE} (FEAture Generation Using REcursive induction). You can see the pseudo-code in appendix \ref{app:2}.
+We name this algorithm \emph{FEAGURE} (FEAture Generation Using REcursive induction). You can see the full pseudo-code in appendix \ref{app:2}.
+
+%TODO: figure showing some feature->problem on values->feed to blackbox->get a binary feature for O using the domain
+%\begin{figure}[t]
+%	\centering
+%	\includegraphics[width=\linewidth]{}
+%	\caption{}
+%	\label{}
+%\end{figure}
 
 In order to explain how we create such $h_{i}$, let us consider a single step of the feature generation algorithm.
 Given a feature $f_{i}$, we define the set of all its value in the training set $S$ as $v_i(S) = \{v | (o,y) \in S, f_{i}(o)=v\}$. In the intro example, for instance, $v_i(S)$ will be the set of all last names of patients.
@@ -174,24 +169,57 @@ $\hat{S_i} = \{ (v, label(v)) | v \in v_i(S) \}$.
 The labelling function can be, for example, defined as
 the majority label: $label(v)=majority(\{y_k| \left(o_k,y_k \right) \in S, f_{i}(o_k)=v\})$.
 
-To define a feature map over the new training set $\hat{S}$, we look for all relations in $\cal R$ where the domain of the key argument contains $v_i$:
-${\cal G}(S,{\cal R}) = \left\{ r \in {\cal R} | v_i(S) \subseteq \{x_1 | (x_1,x_2) \in r\}\right\}$. In the intro example, one such $r$ can be a relation mapping last names to countries of origin. We then use ${\cal G}$ as a feature map for $\hat{S_i}$.
-Solving this new learning problem on $\hat{S_i}, {\cal G}(S,{\cal R})$ yields our classifier $h_{i}$.
+To define a feature map over the new training set $\hat{S_{i}}$, we look for all relations in $\bar{R}$ where the domain of the key argument contains $v_i$:
+${\cal G}(S,\bar{R}) = \left\{ r \in \bar{R} | v_i(S) \subseteq \{x_1 | (x_1,x_2) \in r\}\right\}$. In the intro example, one such $r$ can be a relation mapping last names to countries of origin. We then use ${\cal G}$ as a feature map for $\hat{S_i}$.
+Solving this new learning problem on $\hat{S_i}, {\cal G}(S,\bar{R})$ yields our classifier $h_{i}$.
 Note that during the process of learning $h_{i}$, we can once again call the feature generation procedure to generate useful features for the \emph{new} task, hence the recursive aspect of the process. We can see this in the intro example, wherein we construct a second-level problem on countries of origin to correctly identify the appropriate conditions that signify high risk countries.
-We note that in order to prevent cycles which provide no new information, we disallow re-use of a reverse relations to already used ones.
+
+\begin{algorithm}[H]
+	\caption{Creating a recursive problem}
+	\label{code-creating-prob}
+	\small
+		%insert param stuff
+		\begin{algorithmic}
+			\Function{CreateNewProblem}{$f_{i}$, $S$, $\bar{R}$}
+                \State $v_i(S) = \{v | (o,y) \in S, f_{i}(o)=v\}$
+                \State $\hat{S_i} = \{ (v, label(v)) | v \in v_i(S) \}$ 
+                \Comment $label(v)$ can be, for example, the majority function.
+                \State $F_{new}=\{r(v)=c| c\in Range(r), r\in {\cal G}(S,\bar{R})\}$
+                \State \Comment These are features from $Dom_{i}$ to $\{0,1\}$. For each relevant relation, we use every possible value.
+                \Return $\hat{S_i}, F_{new}$ 
+                \Comment Our new training set and features define a learning problem.
+			\EndFunction
+			
+		\end{algorithmic}
+	\end{algorithm}
+
+We note that in order to prevent cycles which provide no new information, we do not allow the use of any relation that is the inverse of a previously used relation. This is not a major concern, as it is often the case that even relations using similar sets of keys will have often have differing targets (so even if $R_{i}:K\rightarrow Dom_{i}, R_{j}:K\rightarrow Dom_{j}$, usually $Dom_{i}$ and $Dom_{j}$ will be dissimilar).
 
 When performing feature generation, we often wish to evaluate the predictive power of generated features. When such evaluation is done in the context of the entire dataset, it is possible to lose the unique benefit of a potentially powerful feature. To address this phenomenon, we decided to apply our recursive feature generation algorithm in a divide-and-conquer approach through the use of a decision tree. It is important to note, however, that the features generated in this process can be used for any induction algorithm, not necessarily decision tree induction algorithms.
 Using decision trees has several advantages:
 \begin{itemize}
-	\item We gain an innate way to evaluate and filter generated features: A feature generated in a node will be added to the final result only if it is no less informative than the existing feature with the highest information-gain ratio. %We further require that the features achieve a significantly better $\chi^2$ score on the training examples.->this part is not accurate!!!
+	\item We gain an innate way to evaluate and filter generated features: A feature generated in a node will be added to the final result only if it is no less informative than the existing feature with the highest information-gain ratio. 
 	\item Since we repeat this process within inner nodes of the tree, we allow for the discovery of locally relevant relationships which may be difficult to pick up when looking at the entirety of the data. We use pre-pruning based on minimal leaf size to avoid creating features which are poorly supported by actual training data.
 	\item Since a decision tree classifier tests features one at a time, we can easily isolate the impact of a specific generated feature.
-	\item Since we use generated features in the constructed tree, we can ensure that features generated afterwards within the tree will be largely orthogonal to it, thus ensuring variety in the generated features. %is this accurate?
+	\item Since we use generated features in the constructed tree, we can ensure that features generated afterwards within the tree will be largely orthogonal to it, thus ensuring variety in the generated features. 
 	\item Decision trees are relatively interpretable, which leads to features which are easier to understand.
 \end{itemize}
 Naturally, we use decision trees as the classifiers for the newly constructed learning problems as well, allowing us to easily repeat the process recursively. %This also means we can construct features which mix multiple levels of abstraction by having some of the nodes within the tree be constructed features and others be regular ones. In the intro example, we could decide that if the country of origin appropriate for a person's last name is a country at risk, we must still ask whether the person's last name is their maiden name, as the constructed feature would otherwise yield a false positive.
 
 Finally, the features generated during the decision tree training procedure are collected and returned for use as general, black-box features which can be used along with any induction algorithm. The decision tree itself is discarded.
+
+%TODO: pseudo-code! "using a tree to generate and evaluate features"
+%\begin{algorithm}[H]
+%	\caption{Using a decision tree for feature generation and evaluation}
+%	\label{code-tree-thing}
+%	\small
+		%insert param stuff
+%		\begin{algorithmic}
+%			\Function{}{}
+%			\EndFunction
+			
+%		\end{algorithmic}
+%	\end{algorithm}
 
 The aforementioned feature generation approach offers some unique contributions:
 \begin{itemize}
@@ -203,16 +231,14 @@ The aforementioned feature generation approach offers some unique contributions:
 
 
 \subsection{Applications for Text Categorization}
-In order to apply our feature generation technique to the domain of text categorization, we make the standard assumption that our basic features are the words that appear in the texts, as in the bag-of-words \cite{Wu:1981:CST:1013228.511759,salton1983introduction} approach. We can therefore take words which also exist as entities within the relational database as feature values $v_i$ for the sake of our approach.
+In order to apply our feature generation technique to the domain of text categorization, we make the standard assumption that our basic features are the words that appear in the texts, as in the bag-of-words \cite{Wu:1981:CST:1013228.511759,salton1983introduction} approach. We can therefore take words which also exist as entities within the relational database as feature values $v_i$ for the sake of our approach. To successfully do so, we naturally turn to \emph{Named Entity Recognition} (NER) approaches in order to better locate such entitles within the text.
+
 The resulting features will locate sets of words which are connected in the relational domain. This allows us to better generalize compared to the standard bag-of-words method, and find potentially complex semantic relationships, especially when using Semantic Linked Data as our relational database.
 
-An important side effect of this usage is that, since each label in the semantic data defines a relation and texts may contain words from different contexts, there are often multiple relations which apply and thus ${\cal G}(S,{\cal R})$ is often large. For example, a text referring to William Shakespeare's play of ``Hamlet" may connect to relations on people (for William Shakespeare himself), on theatre plays (for ``Hamlet"), and possibly locations (for the country of Denmark, where the play is set).
-In order to make the process more computationally tractable, especially if it is performed recursively, we choose a sub-sample of ${\cal G}(S,{\cal R})$ for which we construct new learning problems. For the initial level of recursive activation we do so uniformly, but in later levels we perform a weighted sampling on relations in ${\cal R}$ based on the mean information-gain ratio of features using a given relation $r\in{\cal R}$.
+An important side effect of this usage is that, since each label in the semantic data defines a relation and texts may contain words from different contexts, there are often multiple relations which apply and thus ${\cal G}(S,\bar{R})$ is often large. For example, a text referring to William Shakespeare's play of ``Hamlet" may connect to relations on people (for William Shakespeare himself), on theatre plays (for ``Hamlet"), and possibly locations (for the country of Denmark, where the play is set).
+In order to make the process more computationally tractable, especially if it is performed recursively, we choose a sub-sample of ${\cal G}(S,\bar{R})$ for which we construct new learning problems. For the initial level of recursive activation we do so uniformly. In later levels we perform a weighted sampling on applicable relations in $\bar{R}$ based on the mean information-gain ratio of features within the current level: We take all features in current level for some relation $r\in\bar{R}$, measure the mean information-gain ratio, and use this as the weight for picking $r$ as a target for recursive activation of the FEAGURE algorithm. 
 
-A second relevant difference to note is that generated feature may be non-applicable to a specific object, as it may be the case that none of the words within the text appear in a given relation (or, in fact, within the knowledge base at large). Therefore, we decided to use a third value for cases where the generated feature does not apply.
-
-In order to correctly match a given word to an entity, we must make capture multiple word entities. Following the work of \citeA{paulheim2012unsupervised}, we used \emph{Named Entity Recognition} (NER) to locate such cases. We used the Stanford Named Entity Recognizer \cite{finkel2005incorporatingfull} to find and group such entities to allow entity matching. We then performed stopword elimination using NLTK \cite{bird2009natural} , removed punctuation marks and performed stemming using the Porter Stemmer \cite{van1980new}.
-
+A second relevant difference to note is that generated feature may be non-applicable to a specific object, as it may be the case that none of the entities within the text come from the relation's key set \footnote{In fact, it is possible that the text contains no entities at all}. Therefore, we decided to have generated features yield a third value for cases where the generated feature does not apply.
 
 %this entire section!
 \section{Empirical Evaluation}
@@ -224,12 +250,18 @@ In this section, we discuss our experimental methodology and display our main re
 As a knowledge base, we used YAGO2 \cite{hoffart2013yago2}, omitting any relations with literal data such as dates or geographic coordinates. This served as a ``common knowledge" database. We also made limited use of type information within the database, opting to simply use it as an additional relation.
 In addition, we stripped semantic information regarding entities, such as ``TV series" or ``fictional character". For each relation within YAGO2, we created both the relation itself as well as the inverse relation, and then removed inverse relations that map very few values to very many, such as the inverse of the ``has gender" relation, which maps ``male" and ``female" to all to all existing people within the YAGO database.
 
+We used the Stanford Named Entity Recognizer \cite{finkel2005incorporatingfull} to allow entity matching. We then performed stopword elimination using NLTK \cite{bird2009natural} , removed punctuation marks and performed stemming using the Porter Stemmer \cite{van1980new}.
+
 We ran our feature generation algorithm for both a depth of one, creating a recursive learning problem for the original problem, and a depth of two, creating recursive learning problems for the original problem and the first order recursive problem.
 
+%add that this is in order to convince ourselves of effectivness
 We compared the new set of features (our new features combined with the original features) to the binary bag-of-words features at various feature selection levels. We used information gain ratio as the feature selection criterion.
 
+%In order to assert that the more complex features are indeed useful, we compare to a unsupervised approach of feature generation. we used an approach similar to that of paulheim2012, blah entity recognition blah feature selection blah relational blah
+%idea: what if you have basic features+this thing+our features? is it better than simply basic+this thing
+
 \subsection{Results}
-Figure \ref{fig:svm_regular} shows the accuracies achieved on all 100 datasets, using a SVM \cite{cortes1995support} classifier (Linear kernel, $C=100$), comparing the accuracy of the baseline using only the original features to a combined pool of original and generated features (with a depth limit of two). In both cases, feature selection was performed, leaving only $20\%$ of the features. The $y=x$ line represents a case where there was no change in performance, and any point above that line represents a dataset upon which we have attained an improvement. In addition, we show lines representing a $5\%$ and $10\%$ difference in accuracy. Results for a feature selection level of $10\%$ are similar, and are also statistically significant $(p<0.05)$.
+Figure \ref{fig:svm_regular} shows the accuracies achieved on all 100 datasets, using a SVM \cite{cortes1995support} classifier (Linear kernel, $C=100$), comparing the accuracy of the baseline using only the original features to a combined pool of original and generated features (with a depth limit of two). In both cases, feature selection was performed, leaving only $20\%$ of the features. The $y=x$ line represents a case where there was no change in performance, and any point above that line represents a dataset upon which we have attained an improvement. In addition, we show lines representing a $5\%$ and $10\%$ difference in accuracy. Results for a feature selection level of $10\%$ are similar, and are also statistically significant $(p<0.05)$. Results for comparing depth one and the baseline approach show similar results and were thus omitted for the sake of brevity.
 
 \begin{figure}[]
 	\centering
@@ -369,7 +401,7 @@ Another major potential avenue for improvement is to use the techniques discusse
 		\caption{FEAGURE}
 		\label{code2}
 		\small
-		$S=\{(o_{i},y_{i})\}$- set of labeled objects. We will mark $Ob$ the objects and $y$ the appropriate labels.
+		$S=\{(o_{i},y_{i})\}$- set of labeled objects. We will mark $Obs$ the objects and $y$ the appropriate labels.
 		
 		$F$- A set of feature-functions.
 		
@@ -383,34 +415,33 @@ Another major potential avenue for improvement is to use the techniques discusse
 			\Function{FEAGURE}{S, F, R, d, min-leaf} %pick feature, split until min-leaf
 				\If {$|S|\leq min-leaf$}
 					\State
-					\Return Leaf
+					\Return Leaf \Comment{We pick features until the tree is too small}
 				\EndIf
 				\State nf, feature= \Call{RI-ChooseFeature}{S, F, R, d, min-leaf}
 				\State \Call{output}{nf}
 				\State
-				\Return \Call{splitByFeature}{feature, S}
+				\Return \Call{splitTreeByFeature}{feature, S}
 			\EndFunction
 			\Function{RI-ChooseFeature}{S, F, R, d, min-leaf}
 			\If {$d = 0$}
 				\State
-				\Return \Call{InductionAlgorithm}{S,F}
+				\Return \Call{constructClassifier}{S,F} \Comment{Can use any traiditional learning algorithm}
 			\EndIf
-			\State addedF= $\{\}$
+			\State addedFeatures= $\{\}$
 			\While {resources not exhausted, new relevant features exist}
-				\State feature= \Call {pickFeature}{S,F}
-				\State newOb= feature(Ob)
-				\State newY= \Call {label}{S,newOb}
-				\State newF= $\{R_{i}(newOb)|R_{i}\in R, newOb\cap D_{i}\neq\emptyset\}$
-				\State S'= (newOb,newY)
-				\State newClf= \Call {FEAGURE}{S', newF, R, $d-1$, min-leaf}
-				\State f= function(x): return newClf(feature(x))
-				\State bestIg= \Call{Best-Info-Gain-ratio}{F, S}
-				\If {\Call{Info-Gain-ratio}{f, S} $\geq$ bestIg}
-					\State addedF= addedF$\cup \{f\}$
+				\State feature= \Call {pickFeature}{S,F} \Comment{Weighted sampling based on information gain}
+				\State newObs= feature(Obs)
+				\State newY= \Call {label}{S,newObs} \Comment{In our example, by majority vote}
+				\State newF= $\{R_{i}(newObs)|R_{i}\in R, newObs\cap Dom_{i}\neq\emptyset\}$ \Comment{A feature function per relevant relation}
+				\State S'= (newObs,newY)
+				\State newClassifer= \Call {FEAGURE}{S', newF, R, $d-1$, min-leaf}
+				\State f= function(x): return newClassifer(feature(x))
+				\If {\Call{InfoGainratio}{f, S} $\geq$ \Call{BestInfoGainratio}{F, S}}
+					\State addedFeatures= addedFeatures$\cup \{f\}$ \Comment{A feature passed our threshold, so we add it}
 				\EndIf
 			\EndWhile
 			\State
-			\Return addedF, \Call{Best-Info-Gain}{F$\cup$addedF, S}
+			\Return addedFeatures, \Call{findBestFeatureByInfoGain}{F$\cup$addedF, S}
 			\EndFunction
 			
 		\end{algorithmic}
